--- a/styles/main_styles.css
+++ b/styles/main_styles.css
@@ -124,7 +124,7 @@ p a:hover::after
 }
 p::selection
 {
-	
+
 }
 h1{font-size: 48px;}
 h2{font-size: 30px;}
@@ -140,14 +140,14 @@ h1, h2, h3, h4, h5, h6
 	line-height: 1.2;
 	color: #2e3f61;
 }
-h1::selection, 
-h2::selection, 
-h3::selection, 
-h4::selection, 
-h5::selection, 
+h1::selection,
+h2::selection,
+h3::selection,
+h4::selection,
+h5::selection,
 h6::selection
 {
-	
+
 }
 .form-control
 {
@@ -676,18 +676,17 @@ section
 }
 .home_title h1
 {
-	font-size: 72px;
+	font-size: 80px;
 	color: #FFFFFF;
-}
+	}
 .home_text
 {
-	max-width: 910px;
+	max-width: 500px;
 	margin-left: auto;
 	margin-right: auto;
-	font-size: 16px;
-	color: #FFFFFF;
-	line-height: 2.25;
-	margin-top: 12px;
+	font-size: 18px;
+	color: #000000;
+	background-color:#F5F5F5;
 }
 
 /*********************************
@@ -891,11 +890,11 @@ section
 .intro_author_title
 {
 	font-size: 12px;
-	font-weight: 500;
+	font-weight: 400;
 	color: #da8661;
 	text-transform: uppercase;
 	line-height: 0.75;
-	margin-top: 4px;
+	margin-top: 1px;
 }
 
 /*********************************
@@ -1062,6 +1061,52 @@ section
 	line-height: 49px;
 	color: #FFFFFF;
 }
+/*********************************
+11. Gallery A
+*********************************/
+
+.gallery1
+{
+
+}
+.gallery_slider_container1
+{
+	width: 100%;
+	height: 595px;
+}
+.gallery_item a
+{
+	display: block;
+	width: 100%;
+	height: 100%;
+}
+.gallery_overlay1
+{
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: rgba(14,14,14,0.76);
+	visibility: hidden;
+	opacity: 0;
+	pointer-events: none;
+}
+.gallery_item1:hover .gallery_overlay1
+{
+	visibility: visible;
+	opacity: 1;
+}
+.gallery_overlay1 > div
+{
+	width: 49px;
+	height: 49px;
+	background: #637496;
+	text-align: center;
+	line-height: 49px;
+	color: #FFFFFF;
+}
+
 
 /*********************************
 11. Newsletter
@@ -1110,9 +1155,9 @@ section
 	font-weight: 400 !important;
 	font-style: italic;
 	color: #7a7a7a !important;
-} 
+}
 .newsletter_input:-ms-input-placeholder
-{ 
+{
 	font-size: 12px !important;
 	font-weight: 400 !important;
 	font-style: italic;
@@ -1302,9 +1347,9 @@ section
 	font-weight: 500 !important;
 	font-style: italic;
 	color: #7a7a7a !important;
-} 
+}
 .contact_input:-ms-input-placeholder
-{ 
+{
 	font-size: 12px !important;
 	font-weight: 500 !important;
 	font-style: italic;
@@ -1403,4 +1448,34 @@ section
 .footer_logo .logo
 {
 	opacity: 0.55;
+}
+
+/*******************************************/
+/*****************ZOOM**********************/
+.zoom:hover
+{
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	-ms-transform: scale(1.5); /* IE 9 */
+  -webkit-transform: scale(1.5); /* Safari 3-8 */
+  transform: scale(1.5);
+}
+
+.responsive-video {
+    position: relative;
+    padding-bottom: 56.25%;
+    padding-top: 60px; overflow: hidden;
+}
+
+.responsive-video iframe,
+.responsive-video object,
+.responsive-video embed {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
