--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -479,10 +479,11 @@
 {
 
 }
+
 .video-responsive {
 position: relative;
 padding-bottom: 56.25%; /* 16/9 ratio */
-padding-top: 30px; /* IE6 workaround*/
+padding-top: 10px; /* IE6 workaround*/
 height: 0;
 overflow: hidden;
 }
@@ -496,4 +497,17 @@ top: 0;
 left:0;
 width:100%;
 height: 100%px;
+}
+.map-responsive{
+    overflow:hidden;
+    padding-bottom:56.25%;
+    position:relative;
+    height:0;
+}
+.map-responsive iframe{
+    left:0;
+    top:0;
+    height:100%;
+    width:100%;
+    position:absolute;
 }
