--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -511,3 +511,16 @@ height: 100%px;
     width:100%;
     position:absolute;
 }
+.lot-responsive{
+    overflow:hidden;
+    padding-bottom:56.25%;
+    position:relative;
+    height:0;
+}
+.lot-responsive iframe{
+    left:0;
+    top:0;
+    height:100%;
+    width:100%;
+    position:absolute;
+}
